[project]
name = "decision-platform"
version = "0.1.0"
description = "企业智能决策中台 — 基于 LangGraph 多 Agent 协作"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-openai>=1.2",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9.12",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
